[package]
name = "sclink"
version = "0.1.4"
edition = "2021"
authors = ["Tulip Protocol"]
description = "lightweight client for reading chainlink solana feeds"
keywords = ["solana", "tulip-protocol", "chainlink"]
license = "Apache-2.0"
documentation = "https://docs.rs/sclink"
readme = "./README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static-pubkey = "1.0.2"
solana-program = ">=1.6"
bytemuck = "1.7.2"
borsh = ">=0.9.1"
borsh-derive = ">=0.9.1"
so-defi-utils = "0.1.6"
type-layout = "0.2.0"
[dev-dependencies]
solana-sdk = ">=1.6"
solana-client = ">=1.6"